# LinguaGen

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
frontend-lingua/src/: App.vue  authState.js
frontend-lingua/src/components/: Chatbot.vue  HelloWorld.vue
frontend-lingua/src/router/: index.js
frontend-lingua/src/views/: Login.vue
lingua/: app.py  main.py
lingua-backend/: Dockerfile  app.py  requirements.txt
lingua-backend/lingua/agents/: LinguaAgent.py
lingua-backend/lingua/utils/: dataclass.py  functions.py
lingua-frontend/: Dockerfile  index.html  package-lock.json  package.json
lingua-frontend/nginx/: custom_nginx.conf
lingua-frontend/src/: App.vue  main.js
lingua-frontend/src/components/: Chatbot.vue  GoogleLoginButton.vue
lingua-frontend/src/router/: index.js
lingua/agents/: LinguaAgent.py
lingua/utils/: dataclass.py  dataclasses.py  functions.py
